# Scribsy

./: .env  .env.example  .env.railway  .gitattributes  .gitignore  .railwayignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  FINAL_STATUS.md  PATIENT_INFORMATION_FEATURE.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_ENV_SETUP.md  RAILWAY_TROUBLESHOOTING.md  README.md  S3_SETUP_GUIDE.md  Scribsy_API_Documentation.md  VERCEL_404_TROUBLESHOOTING.md  VERCEL_DEPLOYMENT_FIX.md  VISIT_ID_AUTO_GENERATION.md  add_lib_files.ps1  build.sh  commit_files.cmd  env.example  fix_build.bat  fix_database.py  fix_git.bat  fix_git.ps1  fix_git.sh  fix_gitignore.bat  fix_railway_db.py  force_add_files.bat  how --name-only e0759b0  init_db.py  init_patients_db.py  live_transcribe_test.html  migrate_add_s3_fields.py  migrate_database.py  migrate_patients_add_user_id.py  nixpacks.toml  (+19 more)
.claude/: settings.local.json
app/: config.py  main.py
app/api/endpoints/: admin.py  (+16 more)
app/audit/: __init__.py  logger.py  models.py
app/crud/: notes.py  patients.py
app/db/: database.py  models.py  nudge_models.py  schemas.py
app/middleware/: tenant_middleware.py
app/security/: __init__.py  audit.py  mfa.py  permissions.py  rbac.py
app/services/: ai_summary.py  audio_retention.py  data_retention.py  email_service.py  nudge_manager.py  preferences.py  s3_service.py  tenant_isolation.py  transcription.py
app/utils/: exceptions.py  logging.py
scribsy-frontend/: README.md  env.production  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
tests/: test_auth_flow.py
(+75 files in other folders)
