[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scribsy-backend"
version = "1.0.0"
description = "Scribsy AI Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "pydantic-ai>=0.0.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "openai>=1.0.0",
    "openai-whisper>=20231117",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "boto3>=1.34.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
